--- a/html-css/lesson4/task2/index.html
+++ b/html-css/lesson4/task2/index.html
@@ -5,7 +5,7 @@
     <title>Класс</title>
   </head>
   <body>
-    <main class="container">
+    <main class="cont">
       <p>Изученные CSS свойства</p>
       <ul>
         <li>width - ширина блока, не применяется для инлайновых элементов</li>
