--- a/html-css/lesson6/task1/index.html
+++ b/html-css/lesson6/task1/index.html
@@ -26,9 +26,9 @@
         <a href="https://www.google.com" title="item popular">Google</a>
       </li>
       <li>
-        <a href="https://www.opera.com" title="popular item" lang="en-us"
-          >Opera</a
-        >
+        <a href="https://www.opera.com" title="popular item" lang="en-us">
+          Opera
+        </a>
       </li>
       <li>
         <a href="https://www.apple.com" title="link popular">Apple</a>
