--- a/html-css/lesson7/task3/index.html
+++ b/html-css/lesson7/task3/index.html
@@ -15,8 +15,8 @@
   <body>
     <h1>Псевдоэлементы</h1>
     <p class="theory">
-      Псевдоэлементы предоставляют способ сослаться на содержимое, которое не
-      существует в исходном документе.
+      <span>П</span>севдоэлементы предоставляют способ сослаться на содержимое,
+      которое не существует в исходном документе.
     </p>
 
     <p>
