--- a/html-css/lesson7/task5/index.html
+++ b/html-css/lesson7/task5/index.html
@@ -19,11 +19,11 @@
 
     <div>
       <p class="hello">I am a paragraph with a class</p>
-      <p id="special">I am a paragraph with an ID</p>
+      <p class="bye" id="special">I am a paragraph with an ID</p>
 
       <h2>I am an awesome h2</h2>
 
-      <p>
+      <p class="bye">
         Tom Sawyer is a boy of about 16 years of age, who resides in the
         fictional town of St. Petersburg, Missouri, in about the year 1845
       </p>
