--- a/html-css/lesson8/task1/index.html
+++ b/html-css/lesson8/task1/index.html
@@ -14,7 +14,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="rectangle1 rectangle"></div>
-    <div class="rectangle2 rectangle"></div>
+    <div class="rectangle1 rectangle">Content Box Sizing</div>
+    <div class="rectangle2 rectangle">Border Box Sizing</div>
   </body>
 </html>
