--- a/html-css/lesson10/task3/index.html
+++ b/html-css/lesson10/task3/index.html
@@ -22,7 +22,7 @@
       </ul>
     </header>
     <main>
-      <section><h2>I can use Flexbox!</h2></section>
+      <section><h2>I can use Flexbox!!!</h2></section>
       <aside>
         <h2>News</h2>
         <ul>
