--- a/html-css/lesson12/task4/index.html
+++ b/html-css/lesson12/task4/index.html
@@ -29,7 +29,9 @@
 &lt;body&gt;
     &lt;div&gt;Text&lt;/div&gt;
 &lt;/body&gt;
-&lt;/html&gt;k</pre
+
+&lt;/html&gt;
+</pre
     >
   </body>
 </html>
