--- a/html-css/lesson12/task4/index.html
+++ b/html-css/lesson12/task4/index.html
@@ -10,6 +10,11 @@
       crossorigin="anonymous"
     />
     <title>Document</title>
+    <style>
+      div {
+        font-size: 24px;
+      }
+    </style>
   </head>
   <body>
     <pre>
