--- a/html-css/lesson12/task4/index.html
+++ b/html-css/lesson12/task4/index.html
@@ -1,23 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU="
-      crossorigin="anonymous"
-    />
-    <title>Document</title>
-    <style>
-      div {
-        font-size: 24px;
-      }
-    </style>
-  </head>
-  <body>
-    <pre>
+<pre>
 &lt;!DOCTYPE html&gt;
 &lt;html lang=&quot;en&quot;&gt;
 
@@ -35,8 +16,5 @@
     &lt;div&gt;Text&lt;/div&gt;
 &lt;/body&gt;
 
-&lt;/html&gt;
-</pre
-    >
-  </body>
-</html>
+&lt;/html&gt;</pre
+>
