--- a/html-css/lesson12/task4/index.html
+++ b/html-css/lesson12/task4/index.html
@@ -1,10 +1,13 @@
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
-  integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI="
-  crossorigin="anonymous"
-/>
-<pre>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <pre>
 &lt;!DOCTYPE html&gt;
 &lt;html lang=&quot;en&quot;&gt;
 
@@ -24,4 +27,7 @@
 
 &lt;/html&gt;
 
-</pre>
+</pre
+    >
+  </body>
+</html>
