--- a/html-css/lesson15/task1/index.html
+++ b/html-css/lesson15/task1/index.html
@@ -27,7 +27,7 @@
             alt="lake and trees"
             class="card-opacity"
           />
-          <figcaption>opacity</figcaption>
+          <figcaption>Opacity</figcaption>
         </figure>
         <figure>
           <img
@@ -35,7 +35,7 @@
             alt="lake and trees"
             class="card-blur"
           />
-          <figcaption>blur</figcaption>
+          <figcaption>Blur</figcaption>
         </figure>
         <figure>
           <img
@@ -43,7 +43,7 @@
             alt="lake and trees"
             class="card-invert"
           />
-          <figcaption>invert</figcaption>
+          <figcaption>Invert</figcaption>
         </figure>
       </div>
     </div>
