--- a/html-css/lesson15/task1/index.html
+++ b/html-css/lesson15/task1/index.html
@@ -14,11 +14,14 @@
   </head>
 
   <body>
-    <img
-      class="main-img"
-      src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/big.jpeg"
-      alt="Land and tree"
-    />
+    <div class="container">
+      <img
+        class="main-img"
+        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/big.jpeg"
+        alt="Land and tree"
+      />
+    </div>
+
     <div class="gallery">
       <figure>
         <img
