--- a/html-css/lesson15/task1/index.html
+++ b/html-css/lesson15/task1/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="image-container">
       <img
         class="main-img"
         src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/big.jpeg"
