--- a/html-css/lesson16/task1/index.html
+++ b/html-css/lesson16/task1/index.html
@@ -13,29 +13,31 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="block-form">
-      <input type="text" name="lastName" value="Emerson" />
-    </div>
-    <div class="block-form">
-      <input type="number" name="age" value="17" />
-    </div>
-    <div class="block-form">
-      <input type="checkbox" name="agree" value="17" />
-      <label for="">Accept terms and conditions</label>
-    </div>
-    <div class="choose-gender">
-      <input type="radio" name="gender" /><label for=""> Male</label>
-      <input type="radio" name="gender" /><label for=""> Female</label>
-      <input type="radio" name="gender" /><label for=""> Secret</label>
-    </div>
-    <div class="block-form">
-      <textarea
-        name="description"
-        placeholder="Write description..."
-      ></textarea>
-    </div>
-    <div class="block-form">
-      <button type="submit">Submit</button>
-    </div>
+    <form>
+      <div class="block-form">
+        <input type="text" name="lastName" value="Emerson" />
+      </div>
+      <div class="block-form">
+        <input type="number" name="age" value="17" />
+      </div>
+      <div class="block-form">
+        <input type="checkbox" name="agree" value="17" />
+        <label for="">Accept terms and conditions</label>
+      </div>
+      <div class="choose-gender">
+        <input type="radio" name="gender" checked /><label for=""> Male</label>
+        <input type="radio" name="gender" /><label for=""> Female</label>
+        <input type="radio" name="gender" /><label for=""> Secret</label>
+      </div>
+      <div class="block-form">
+        <textarea
+          name="description"
+          placeholder="Write description..."
+        ></textarea>
+      </div>
+      <div class="block-form">
+        <button type="submit">Submit</button>
+      </div>
+    </form>
   </body>
 </html>
