--- a/html-css/lesson16/task2/index.html
+++ b/html-css/lesson16/task2/index.html
@@ -51,14 +51,14 @@
         <label for="check-form">Accept terms and conditions</label>
       </div>
       <div class="choose-gender">
-        <input type="radio" id="male" name="gender" checked /><label for="male"
-          >Male</label
+        <input type="radio" id="male" name="gender" checked /><label for="male"></label>
+         Male</label
         >
-        <input type="radio" id="female" name="gender" /><label for="female"
-          >Female</label
+        <input type="radio" id="female" name="gender" /><label for="female">
+         Female</label
         >
-        <input type="radio" id="secret" name="gender" /><label for="secret"
-          >Secret</label
+        <input type="radio" id="secret" name="gender" /><label for="secret">
+         Secret</label
         >
       </div>
       <div class="block-form">
