--- a/html-css/lesson16/task3/index.html
+++ b/html-css/lesson16/task3/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <label class="checkbox">
+    <label class="checkbox" for="check-box">
       Checkbox
       <input type="checkbox" name="box" id="check-box" />
       <span class="check"></span>
