--- a/html-css/lesson18/task2/index.html
+++ b/html-css/lesson18/task2/index.html
@@ -58,7 +58,7 @@
       catch the bird
     </button>
     <button class="custom-btn">
-      <i class="far fa-id-card"></i>
+      <i class="fas fa-id-card"></i>
       create account
     </button>
   </body>
