--- a/html-css/lesson18/task3/index.html
+++ b/html-css/lesson18/task3/index.html
@@ -11,24 +11,18 @@
       crossorigin="anonymous"
     />
     <!-- font awesome 4.0 -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <script src="https://use.fontawesome.com/97a7a2686e.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
     <div>
-      <i class="fas fa-battery-full"></i>
-      <i class="fas fa-battery-three-quarters"></i>
-      <i class="fas fa-battery-half"></i>
-      <i class="fas fa-battery-quarter"></i>
-      <i class="fas fa-battery-empty"></i>
+      <i class="fa fa-battery-full"></i>
+      <i class="fa fa-battery-three-quarters"></i>
+      <i class="fa fa-battery-half"></i>
+      <i class="fa fa-battery-quarter"></i>
+      <i class="fa fa-battery-empty"></i>
     </div>
   </body>
 </html>
