--- a/html-css/lesson24/task1/index.html
+++ b/html-css/lesson24/task1/index.html
@@ -36,7 +36,11 @@
 
         <header class="header">
           <div class="logo">
-            <img class="logo__image" src="img/main-logo.png" alt="light logo" />
+            <img
+              class="logo__image"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon.png"
+              alt="light logo"
+            />
             <div class="logo__text">
               <div class="logo__name">Foundation</div>
               <div class="logo__description">Startup landing template</div>
@@ -78,7 +82,7 @@
           </div>
           <img
             class="headline__banner"
-            src="img/ouch.png"
+            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png"
             alt="Headline Banner"
           />
         </section>
@@ -110,21 +114,21 @@
           <div class="customers__item">
             <img
               class="customers__logo"
-              src="img/logo-nyt.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
               alt="New Yourk Times Logo"
             />
           </div>
           <div class="customers__item">
             <img
               class="customers__logo"
-              src="img/logo-forbes.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-forbes.png"
               alt="Forbes Logo"
             />
           </div>
           <div class="customers__item">
             <img
               class="customers__logo"
-              src="img/logo-apple.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-apple.png"
               alt="Apple Logo"
             />
           </div>
@@ -133,21 +137,21 @@
           <div class="customers__item">
             <img
               class="customers__logo"
-              src="img/logo-mashable.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-mashable.png"
               alt="Mashable Logo"
             />
           </div>
           <div class="customers__item">
             <img
               class="customers__logo"
-              src="img/logo-wsj.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-wsj.png"
               alt="WSJ Logo"
             />
           </div>
           <div class="customers__item">
             <img
               class="customers__logo"
-              src="img/logo-google.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-google.png"
               alt="Google Logo"
             />
           </div>
@@ -167,7 +171,7 @@
           <figure class="tip__decoration">
             <img
               class="tip__image"
-              src="img/tip-asquire-customer.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-asquire-customer.png"
               alt="Asquire Customer"
             />
             <figcaption class="tip__image-caption">
@@ -185,7 +189,7 @@
           <figure class="tip__decoration">
             <img
               class="tip__image"
-              src="img/tip-engage-user.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-engage-user.png"
               alt="Engage User"
             />
             <figcaption class="tip__image-caption">
@@ -201,7 +205,11 @@
             customer support tickets.
           </p>
           <figure class="tip__decoration">
-            <img class="tip__image" src="img/tip-support.png" alt="Support" />
+            <img
+              class="tip__image"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-support.png"
+              alt="Support"
+            />
             <figcaption class="tip__image-caption">
               Live chat and messaging
             </figcaption>
@@ -214,7 +222,7 @@
       <section class="features">
         <img
           class="features__decoration-left"
-          src="img/hiden-ouch.png"
+          src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hidden-ouch.png"
           alt="Half Hidden Head"
         />
         <div class="features__content">
@@ -226,7 +234,10 @@
               people.
             </p>
             <div class="features__advantage-header">
-              <img src="img/icon-compas.png" alt="Compas" />
+              <img
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-compas.png"
+                alt="Compas"
+              />
               <h5 class="features__advantage-title">Acquire new customers</h5>
             </div>
             <p class="features__advantage-description">
@@ -234,11 +245,17 @@
               code, documentation.
             </p>
             <div class="features__advantage-item">
-              <img src="img/icon-building.png" alt="Icon building" />
+              <img
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-building.png"
+                alt="Icon building"
+              />
               <span class="features__advantage-item-text">Engage users</span>
             </div>
             <div class="features__advantage-item">
-              <img src="img/icon-bucket.png" alt="Icon bucket" />
+              <img
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-bucket.png"
+                alt="Icon bucket"
+              />
               <span class="features__advantage-item-text"
                 >Develop across platforms</span
               >
@@ -247,7 +264,7 @@
         </div>
         <img
           class="features__banner"
-          src="img/invision-screen.png"
+          src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/invision-screen.png"
           alt="Invision Screen"
         />
       </section>
@@ -258,7 +275,7 @@
         <div class="inbox__card">
           <img
             class="inbox__illustrate"
-            src="img/cycle.png"
+            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/wheel.png"
             alt="Cycle Compas"
           />
           <p class="inbox__info">Connect with customers and grow faster</p>
@@ -282,7 +299,7 @@
             </article>
             <div class="inbox__box">
               <img
-                src="img/user-icon.png"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-avatar.png"
                 alt="User Icon"
                 class="inbox__user-icon"
               />
@@ -315,7 +332,7 @@
 
           <div class="communication__card">
             <img
-              src="img/phone-in-hand.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hand-with-phone.png"
               alt="Phone in hand"
               class="communication__card-img"
             />
@@ -380,26 +397,34 @@
         <div class="audience__cards">
           <div class="audience__card">
             <img
-              src="img/future-head.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
               alt="Future Head"
               class="audience__card-img"
             />
             <h6 class="audience__card-info">Developers</h6>
           </div>
           <div class="audience__card">
-            <img src="img/tv.png" alt="TV" class="audience__card-img" />
+            <img
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
+              alt="TV"
+              class="audience__card-img"
+            />
             <h6 class="audience__card-info">Entertainment</h6>
           </div>
           <div class="audience__card">
             <img
-              src="img/body-what-moving.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
               alt="Body what moving"
               class="audience__card-img"
             />
             <h6 class="audience__card-info">Athletes</h6>
           </div>
           <div class="audience__card">
-            <img src="img/lamp.png" alt="Lamp" class="audience__card-img" />
+            <img
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
+              alt="Lamp"
+              class="audience__card-img"
+            />
             <h6 class="audience__card-info">Creators</h6>
           </div>
         </div>
@@ -412,21 +437,21 @@
           <div class="customers__item">
             <img
               class="customers__logo"
-              src="img/logo-nyt.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
               alt="New Yourk Times Logo"
             />
           </div>
           <div class="customers__item">
             <img
               class="customers__logo"
-              src="img/logo-forbes.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-forbes.png"
               alt="Forbes Logo"
             />
           </div>
           <div class="customers__item">
             <img
               class="customers__logo"
-              src="img/logo-apple.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-apple.png"
               alt="Apple Logo"
             />
           </div>
@@ -435,21 +460,21 @@
           <div class="customers__item">
             <img
               class="customers__logo"
-              src="img/logo-mashable.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-mashable.png"
               alt="Mashable Logo"
             />
           </div>
           <div class="customers__item">
             <img
               class="customers__logo"
-              src="img/logo-wsj.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-wsj.png"
               alt="WSJ Logo"
             />
           </div>
           <div class="customers__item">
             <img
               class="customers__logo"
-              src="img/logo-google.png"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-google.png"
               alt="Google Logo"
             />
           </div>
@@ -479,7 +504,11 @@
           <div class="feedback__cycles-navigate"></div>
         </div>
 
-        <img src="img/balloon.png" alt="Balloon" class="feedback__scroll" />
+        <img
+          src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/balloon.png"
+          alt="Balloon"
+          class="feedback__scroll"
+        />
         <div class="feedback__line"></div>
       </section>
 
@@ -530,7 +559,7 @@
       <section class="order">
         <img
           class="order__illustration"
-          src="img/illustration-window.png"
+          src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png"
           alt="Window"
         />
         <div class="order__details">
@@ -560,7 +589,11 @@
         <div class="footer-navigation">
           <div class="about-company">
             <div class="logo">
-              <img class="logo__image" src="img/icon-dark.png" alt="logo" />
+              <img
+                class="logo__image"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-dark.png"
+                alt="logo"
+              />
               <div class="logo__text">
                 <div class="logo__name">Foundation</div>
                 <div class="logo__description">Startup landing template</div>
@@ -586,10 +619,13 @@
             <div class="downloads">
               <img
                 class="downloads__item"
-                src="img/app-store.png"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/app-store.png"
                 alt="Apple Store Download"
               />
-              <img src="img/google-play.png" alt="Google Play Download" />
+              <img
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/google-play.png"
+                alt="Google Play Download"
+              />
             </div>
           </div>
           <div class="footer__line hide_desktop"></div>
@@ -628,18 +664,24 @@
               href="https://twitter.com"
               target="_blank"
             >
-              <img src="img/social-twitter.png" alt="Twitter Link" />
+              <img
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-twitter.png"
+                alt="Twitter Link"
+              />
             </a>
             <a
               class="social-links__item"
               href="https://facebook.com"
               target="_blank"
             >
-              <img src="img/social-fb.png" alt="Facebook Link" />
+              <img
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-fb.png"
+                alt="Facebook Link"
+              />
             </a>
             <a
               class="social-links__item"
-              href="https://linkedin.com"
+              href="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-linkedIn.png"
               target="_blank"
             >
               <img src="img/social-linkedin.png" alt="LinkedIn Link" />
