add some changes

--- a/html-css/lesson24/task1/index.html
+++ b/html-css/lesson24/task1/index.html
@@ -557,11 +557,13 @@
       <!-- Order -->
 
       <section class="order">
-        <img
-          class="order__illustration"
-          src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png"
-          alt="Window"
-        />
+        <div class="order__img">
+          <img
+            class="order__illustration"
+            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png"
+            alt="Window"
+          />
+        </div>
         <div class="order__details">
           <h3 class="order__title">Start your free trial.</h3>
           <p class="order__text">
@@ -684,7 +686,10 @@
               href="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-linkedIn.png"
               target="_blank"
             >
-              <img src="img/social-linkedin.png" alt="LinkedIn Link" />
+              <img
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-linkedIn.png"
+                alt="LinkedIn Link"
+              />
             </a>
           </div>
         </div>
