add true classes

--- a/html-css/lesson25/task1/index.html
+++ b/html-css/lesson25/task1/index.html
@@ -36,7 +36,7 @@
           Simple website made in the world's most popular CMS system, Wordpress.
         </p>
 
-        <div class="price__advantage">
+        <div class="price-card__options-list">
           <div class="price__profit">
             <i class="price__profit-img price__profit-img-green"></i>
             <span class="price__profit-item">Website in WordPress</span>
@@ -88,7 +88,7 @@
           Wordpress.
         </p>
 
-        <div class="price__advantage">
+        <div class="price-card__options-list">
           <div class="price__profit">
             <i class="price__profit-img price__profit-img-blue"></i>
             <span class="price__profit-item">Website in WordPress</span>
@@ -136,7 +136,7 @@
           Wordpress.
         </p>
 
-        <div class="price__advantage">
+        <div class="price-card__options-list">
           <div class="price__profit">
             <i class="price__profit-img price__profit-img-orange"></i>
             <span class="price__profit-item">Website in WordPress</span>
