add some changes

--- a/html-css/lesson25/task1/index.html
+++ b/html-css/lesson25/task1/index.html
@@ -30,7 +30,7 @@
           <span class="price-card__subtitle">Website</span>
         </div>
 
-        <h1 class="price__how-much green">99&euro;</h1>
+        <h1 class="price-card__price green">99&euro;</h1>
 
         <p class="price__info">
           Simple website made in the world's most popular CMS system, Wordpress.
@@ -79,9 +79,7 @@
           <span class="price-card__subtitle">Website</span>
         </div>
 
-        <div class="price__line blue">
-          <h1 class="price__how-much">299&euro;</h1>
-        </div>
+        <h1 class="price-card__price blue">299&euro;</h1>
 
         <p class="price__info">
           Advanced website made in the world's most popular CMS system,
@@ -129,7 +127,7 @@
           <span class="price-card__subtitle">Website</span>
         </div>
 
-        <h1 class="price__how-much orange">599&euro;</h1>
+        <h1 class="price-card__price orange">599&euro;</h1>
 
         <p class="price__info">
           Your very own webshop made the world's most popular CMS system,
