--- a/js-full/lesson27/task3/index.html
+++ b/js-full/lesson27/task3/index.html
@@ -23,11 +23,6 @@
       <ul class="list"></ul>
     </main>
 
-    <script src="scripts/index.js" type="module"></script>
-    <script src="scripts/renderer.js" type="module"></script>
-    <script src="scripts/storage.js" type="module"></script>
-    <script src="scripts/updateTask.js" type="module"></script>
-    <script src="scripts/createTask.js" type="module"></script>
-    <script src="scripts/todoList.js" type="module"></script>
+    <script src="src/scripts/index.js" type="module"></script>
   </body>
 </html>
